--- a/app/src/main/res/menu/menu_header.xml
+++ b/app/src/main/res/menu/menu_header.xml
@@ -14,6 +14,13 @@
         android:title="Toggle Dark Mode"
         android:orderInCategory="101"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/notificationButton"
+        android:title="Notifications"
+        android:orderInCategory="101"
+        app:showAsAction="never" />
+
     <item
         android:id="@+id/log_out"
         android:title="Log Out"
