--- a/app/src/main/res/layout/adapter_notification.xml
+++ b/app/src/main/res/layout/adapter_notification.xml
@@ -15,6 +15,7 @@
 
         <!-- Poster's Profile -->
         <ImageView
+            android:id="@+id/userProfilePicture"
             android:layout_width="75dp"
             android:layout_height="match_parent"
             android:padding="7dp"
