--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -67,14 +67,34 @@
             android:paddingEnd="5dp"
             android:layout_weight="2">
 
-            <Button
-                android:id="@+id/viewNotificationButton"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fontFamily="@font/inriasansregular"
-                android:text="Notifications"
-                android:textStyle="bold"
-                android:textSize="7dp"></Button>
+            <FrameLayout
+                android:id="@+id/notificationButtonWrapper"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/viewNotificationButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/inriasansregular"
+                    android:textStyle="bold"
+                    android:textSize="8dp"
+                    android:padding="0dp"
+                    android:text="Notifications" />
+
+                <View
+                    android:id="@+id/notificationDot"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_gravity="top|end"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginEnd="0dp"
+                    android:background="@drawable/round_red_shape"
+                    android:clipToOutline="true"
+                    android:visibility="gone"
+                    />
+            </FrameLayout>
+
         </LinearLayout>
 
     </LinearLayout>
