--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,4 +26,6 @@
     <dimen name="profile_pic">100dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="text_area_height">100dp</dimen>
+
+    <dimen name="dot_size">10dp</dimen>
 </resources>
