--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,3 +1,4 @@
 <resources>
     <item type="id" name="notification_dot_overlay" />
+    <item type="id" name="message_dot_overlay" />
 </resources>
