--- a/app/src/main/res/layout/adapter_notification.xml
+++ b/app/src/main/res/layout/adapter_notification.xml
@@ -7,6 +7,7 @@
     android:padding="10dp">
 
     <LinearLayout
+        android:id="@+id/notificationAdapter"
         android:layout_width="match_parent"
         android:layout_height="90dp"
         android:padding="5dp"
