--- a/app/src/main/res/drawable/white_translucency_gradient_horizontal_chat_title.xml
+++ b/app/src/main/res/drawable/white_translucency_gradient_horizontal_chat_title.xml
@@ -1,11 +1,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <corners
-                android:topLeftRadius="25dp"
-                android:topRightRadius="25dp"
-                android:bottomLeftRadius="25dp"
-                android:bottomRightRadius="25dp" />
+            <corners android:radius="5dp" />
             <gradient
                 android:startColor="#005984"
                 android:endColor="#CD70CCFA"
