--- a/app/src/main/res/layout/adapter_chatroom.xml
+++ b/app/src/main/res/layout/adapter_chatroom.xml
@@ -17,13 +17,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:fontFamily="@font/monoton"
+            android:fontFamily="@font/lobstertwobold"
             android:shadowColor="@color/black"
             android:shadowDx="2"
             android:shadowDy="1"
             android:text="Chatroom Name"
             android:textColor="#F5F5FF"
-            android:textSize="16sp" />
+            android:textSize="24sp" />
 
         <!-- Last Message -->
         <TextView
