--- a/app/src/main/res/layout/fragment_profile_view.xml
+++ b/app/src/main/res/layout/fragment_profile_view.xml
@@ -41,7 +41,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
-                android:background="@drawable/white_translucency_gradient_horizontal_chattab"
+                android:background="@drawable/white_translucency_gradient_horizontal_button2"
 
                 android:padding="5dp">
                 <CheckBox
@@ -53,29 +53,33 @@
                     android:button="@null"
                     android:text="Follow"
                     android:textColor="@color/white"
-                    android:textSize="8dp"/>
+                    android:textSize="12dp"/>
             </LinearLayout>
+
+            <View
+                android:layout_width="10dp"
+                android:layout_height="match_parent"/>
+
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:gravity="center"
                 android:paddingStart="5dp"
                 android:paddingEnd="5dp"
-                android:background="@drawable/white_translucency_gradient_horizontal_chattab"
-
+                android:background="@drawable/white_translucency_gradient_horizontal_button2"
                 android:layout_weight="2">
 
                 <Button
                     android:id="@+id/messageButton"
                     android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:gravity="center"
+                    android:layout_height="35dp"
                     android:fontFamily="@font/inriasansregular"
                     android:text="Message"
                     android:textStyle="bold"
                     android:background="@android:color/transparent"
-
+                    android:paddingHorizontal="4dp"
                     android:textColor="@color/white"
-                    android:textSize="8dp" />
+                    android:textSize="12dp" />
             </LinearLayout>
         </LinearLayout>
 
