--- a/app/src/main/res/layout/fragment_notification_setting.xml
+++ b/app/src/main/res/layout/fragment_notification_setting.xml
@@ -41,20 +41,28 @@
             android:scrollbars="vertical"/>
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
             android:layout_gravity="center"
             android:padding="10dp">
 
-            <Button
-                android:id="@+id/saveButton"
-                android:layout_width="100dp"
-                android:layout_height="0dp"
-                android:layout_weight="1"
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:orientation="vertical"
                 android:layout_gravity="center"
-                android:text="Save"/>
+                android:background="@drawable/white_translucency_gradient_horizontal_button5">
 
+                <Button
+                    android:id="@+id/saveButton"
+                    android:layout_width="100dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:text="Save"
+                    android:backgroundTint="@android:color/transparent"
+                    android:textColor="#23384C" />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 </FrameLayout>
