--- a/app/src/main/res/layout/adapter_search_profile.xml
+++ b/app/src/main/res/layout/adapter_search_profile.xml
@@ -19,8 +19,7 @@
             android:layout_height="match_parent"
             android:padding="7dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/navigation_profile_24"
-            app:tint="@color/white" />
+            android:src="@drawable/navigation_profile_24" />
 
         <!-- Poster's Username and Comments -->
         <LinearLayout
