Added in comments throughout script, remove unused functions and variables etc.

--- a/app/src/main/res/layout/fragment_chatroom_setup.xml
+++ b/app/src/main/res/layout/fragment_chatroom_setup.xml
@@ -9,7 +9,7 @@
     tools:context=".Activities.Messages.EditChatroomFragment">
 
     <!-- 1) Emoji background layer -->
-    <com.soundpaletteui.Views.EmojiBackgroundView
+    <com.soundpaletteui.Infrastructure.Utilities.EmojiBackgroundView
         android:id="@+id/emojiBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
