--- a/app/src/main/res/layout/activity_register_tags.xml
+++ b/app/src/main/res/layout/activity_register_tags.xml
@@ -9,7 +9,7 @@
     tools:context=".Activities.Profile.RegisterTagsActivity">
 
     <!-- Emoji background layer -->
-    <com.soundpaletteui.Views.EmojiBackgroundView
+    <com.soundpaletteui.Infrastructure.Utilities.EmojiBackgroundView
         android:id="@+id/emojiBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
