--- a/app/src/main/res/layout/fragment_post_create.xml
+++ b/app/src/main/res/layout/fragment_post_create.xml
@@ -9,7 +9,7 @@
     tools:context=".Activities.Posts.CreatePostFragment">
 
     <!-- Emoji Background Layer -->
-    <com.soundpaletteui.Views.EmojiBackgroundView
+    <com.soundpaletteui.Infrastructure.Utilities.EmojiBackgroundView
         android:id="@+id/emojiBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
