--- a/app/src/main/res/layout/adapter_search_profile.xml
+++ b/app/src/main/res/layout/adapter_search_profile.xml
@@ -19,7 +19,8 @@
             android:layout_height="match_parent"
             android:padding="7dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/navigation_profile_24" />
+            android:src="@drawable/navigation_profile_24"
+            android:id="@+id/profilePicture"/>
 
         <!-- Poster's Username and Comments -->
         <LinearLayout
